--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HomerSimpson_SergiFernandez</string>
+    <string name="t_tol_dels_simpsons">Títol dels Simpsons</string>
+    <string name="homer_simpson">Homer Simpson</string>
 </resources>
